--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -8,7 +8,7 @@
     <ul class="list-group list-group-flush">
       <% items.forEach(file => { %>
         <form action="/blogs" method="POST">
-          <button name="<%= file %>" type="submit" value="<%= file %>"><%= file %></button>
+          <button name="choice" type="submit" value="<%= file %>"><%= file %></button>
 
         </form>
       <% }); %>
